--- a/file.html
+++ b/file.html
@@ -6,7 +6,6 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <header>
@@ -18,8 +17,12 @@
         <a href="lab6.php">Lab6</a>
     </nav>
 </header>
-    <main>
-
-    </main>
+<main>
+    <a href="lab1.php">Lab1</a>
+    <a href="lab2.php">Lab2</a>
+    <a href="lab3.php">Lab3</a>
+    <a href="lab4.php">Lab4</a>
+    <a href="lab6.php">Lab6</a>
+</main>
 </body>
 </html>
